# tech-blog

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: cache.py  config.py  main.py
backend/src/api/: posts.py
backend/src/notion/: client.py  renderer.py  sync.py
backend/tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_renderer.py
docker/: Caddyfile  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: backend-architecture.md  coding-standards.md  docker-and-deployment.md  frontend-architecture.md  notion-seo-manual-setup.md  notion-setup.md  project-overview.md  testing-and-linting.md
docs/notion/api-reference/: event-types-and-delivery.md  integration-capabilities.md  introduction.md  status-codes.md  webhooks.md
docs/notion/overview/: authorization.md  best-practices-for-handling-api-keys.md  build-your-first-integration.md  creating-pages-from-templates.md  notion-api-overview.md  (+9 more)
frontend/: .gitignore  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: HeroCarousel.vue  HeroSection.vue  NavBar.vue  PostCard.vue  PostMeta.vue  RelatedPosts.vue  TableOfContents.vue  TopRead.vue
frontend/composables/: useApi.ts  useLocaleSwitch.ts  useSeo.ts
frontend/layouts/: default.vue
frontend/locales/: en.json  it.json
frontend/pages/: about-blog.vue  about-me.vue  index.vue
frontend/public/: robots.txt  site.webmanifest
frontend/types/: blog.ts
(+48 files in other folders)
